Fix for blockquotes on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -58,4 +58,5 @@ ol.nav { list-style: none; margin-left: 0; }
 { 
 	header, section, article, footer { width: 95%; margin: 0 auto; min-width: 320px; }
 	img { max-width: 100%; }
+	.quote blockquote { width: auto; }
 }
